--- a/backend/package.json
+++ b/backend/package.json
@@ -1,18 +1,22 @@
 {
-  "name": "backend",
+  "name": "@dhruvaprasad001/medium-common",
+  "version": "1.0.4",
   "scripts": {
     "dev": "wrangler dev",
     "deploy": "wrangler deploy --minify"
   },
   "dependencies": {
-    "@dhruvaprasad001/hackathon": "^1.0.0",
-    "@prisma/client": "^6.6.0",
-    "@prisma/extension-accelerate": "^1.3.0",
-    "hono": "^4.7.6",
-    "prisma": "^6.6.0"
+    "@dhruvaprasad001/medium-common": "^1.0.1",
+    "@prisma/client": "^6.1.0",
+    "@prisma/extension-accelerate": "^1.2.1",
+    "axios": "^1.7.9",
+    "cors": "^2.8.5",
+    "hono": "^4.6.14",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20250214.0",
-    "wrangler": "^4.4.0"
+    "@cloudflare/workers-types": "^4.20241112.0",
+    "prisma": "^6.1.0",
+    "wrangler": "^3.88.0"
   }
 }
